Fix legibility of index page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@ body {
 }
 
 .post-preview {
-  h3.post-title {
+  h2.post-title {
     margin-bottom: 0;
   }
 
@@ -107,4 +107,11 @@ table tbody tr:nth-of-type(even) {
 
 table tbody tr:last-of-type {
     border-bottom: 2px solid var(--accent-color);
+}
+
+hr.gradient-line {
+  height: 2px;
+  border: none;
+  border-radius: 10px;
+  background-image: linear-gradient(to right, #ffffff, var(--accent-color));
 }
