--- a/sass/text.scss
+++ b/sass/text.scss
@@ -62,7 +62,7 @@ a:visited {
 
 main {
   max-width: 700px;
-  padding-top: 8rem;
+  padding-top: 4rem;
   margin: auto;
 }
 
